load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.tomqwpl/bazeltest/cmd",
    visibility = ["//visibility:private"],
    deps = ["@com_github_census_instrumentation_opencensus_proto//gen-go/trace/v1:trace"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
